--- a/pages/page1.html
+++ b/pages/page1.html
@@ -7,13 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Git</h1>
-    <nav>
-        <ul>
-            <li><a href="pages/page1.html">Page 01</a></li>
-            <li><a href="pages/page2.html">Page 02</a></li>
-            <li><a href="pages/page3.html">Page 03</a></li>
-        </ul>
-    </nav>
+    <h1>page 01</h1>
 </body>
 </html>
