--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Hello Git</h1>
+
+    <div class="paragraph">
+        <p>Hello cat</p>
+        <p>Hello cow</p>
+        <p>Hello dog</p>
+    </div>
 </body>
 </html>
