--- a/index.html
+++ b/index.html
@@ -8,5 +8,22 @@
 </head>
 <body>
     <h1>Hello Git</h1>
+    <div class="textfield">
+        <label for="">Text
+            <input type="text">
+        </label>
+        <div class="checkbox">
+            <input type="checkbox">cow
+            <input type="checkbox">cat
+            <input type="checkbox">dog
+        </div>
+        <select>
+            <option value="" disabled>pet</option>
+            <option value="">Monkey</option>
+            <option value="">Pig</option>
+            <option value="">Hourse</option>
+        </select>
+        <textarea name="" id="" cols="20" rows="10"></textarea>
+    </div>
 </body>
 </html>
